Add basic styling

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <body>
     <header class="header">
+      <i class="fa-solid fa-paintbrush"></i>
       <h1 class="header-heading">Etch A Sketch</h1>
     </header>
 
