Remove unnecessary footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <header class="header">
       <i class="fa-solid fa-paintbrush"></i>
       <h1 class="header-heading">Etch A Sketch</h1>
+      <a class="github" href="https://github.com/GDimitroff" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
     </header>
 
     <main class="main">
@@ -32,14 +35,5 @@
 
       <section class="settings"></section>
     </main>
-
-    <footer class="footer">
-      <p class="copyright">
-        Copyright &copy; <span class="year">2022</span> Gospodin Dimitrov
-      </p>
-      <a href="https://github.com/GDimitroff" target="_blank">
-        <i class="fa-brands fa-github"></i>
-      </a>
-    </footer>
   </body>
 </html>
