Major refactoring the code

--- a/index.html
+++ b/index.html
@@ -23,17 +23,23 @@
     <header class="header">
       <i class="fa-solid fa-paintbrush"></i>
       <h1 class="header-heading">Etch A Sketch</h1>
-      <a class="github" href="https://github.com/GDimitroff" target="_blank">
-        <i class="fa-brands fa-github"></i>
-      </a>
     </header>
 
     <main class="main">
-      <section class="colors"></section>
-
       <section class="grid"></section>
-
-      <section class="settings"></section>
+      <aside class="settings">
+        <p class="settings-heading">Grid density:</p>
+        <div class="actions">
+          <a class="btn small">Small</a>
+          <a class="btn medium">Medium</a>
+          <a class="btn big">Big</a>
+        </div>
+        <div class="github">
+          <a href="https://github.com/GDimitroff" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </div>
+      </aside>
     </main>
   </body>
 </html>
