--- a/index.html
+++ b/index.html
@@ -28,11 +28,42 @@
     <main class="main">
       <section class="grid"></section>
       <aside class="settings">
-        <p class="settings-heading">Grid density:</p>
-        <div class="actions">
-          <a class="btn small">Small</a>
-          <a class="btn medium">Medium</a>
-          <a class="btn big">Big</a>
+        <div class="grid-settings">
+          <h3 class="grid-settings-title">Grid Options</h3>
+          <div class="grid-background">
+            <label for="grid-background">Background</label>
+            <input
+              type="color"
+              id="grid-background"
+              name="grid-background"
+              value="#fdf4ff"
+            />
+          </div>
+          <div class="grid-borders">
+            <label for="grid-borders">Borders</label>
+            <input
+              type="color"
+              id="grid-borders"
+              name="grid-borders"
+              value="#fae8ff"
+            />
+          </div>
+          <div class="grid-buttons">
+            <a>Clear</a>
+            <a>Reset</a>
+          </div>
+          <div class="grid-density">
+            <input
+              type="range"
+              id="grid-density"
+              name="grid-density"
+              min="8"
+              max="88"
+              value="16"
+              step="8"
+            />
+            <label for="grid-density">16 x 16</label>
+          </div>
         </div>
         <div class="github">
           <a href="https://github.com/GDimitroff" target="_blank">
