--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
             <label for="grid-density">16 x 16</label>
           </div>
         </div>
+
+        <div class="paint-settings">
+          <h3 class="grid-settings-title">Paint Options</h3>
+          <div class="colors">
+            <a class="spring">Spring</a>
+            <a class="summer">Summer</a>
+            <a class="autumn">Autumn</a>
+            <a class="winter">Winter</a>
+            <a class="shading">Shading</a>
+            <a class="lighten">Lighten</a>
+          </div>
+        </div>
+
         <div class="github">
           <a href="https://github.com/GDimitroff" target="_blank">
             <i class="fa-brands fa-github"></i>
