Add proper divider

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
           </div>
         </div>
 
+        <div class="divider"></div>
+
         <div class="paint-settings">
           <h3 class="grid-settings-title">Paint Options</h3>
           <div class="colors">
