Improve code readability

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <main class="main">
       <section class="grid"></section>
 
-      <aside class="settings">
-        <div class="grid-settings">
-          <h3 class="grid-settings-title">Grid Options</h3>
-          <div class="grid-background">
+      <aside class="options">
+        <div class="options-grid">
+          <h3 class="options-heading">Grid</h3>
+          <div class="options-grid-background">
             <label for="grid-background">Background</label>
             <input
               type="color"
@@ -41,7 +41,7 @@
               value="#fdf4ff"
             />
           </div>
-          <div class="grid-borders">
+          <div class="options-grid-borders">
             <label for="grid-borders">Borders</label>
             <input
               type="color"
@@ -50,11 +50,11 @@
               value="#fae8ff"
             />
           </div>
-          <div class="grid-buttons">
+          <div class="options-grid-buttons">
             <a>Clear</a>
             <a>Reset</a>
           </div>
-          <div class="grid-density">
+          <div class="options-grid-density">
             <input
               type="range"
               id="grid-density"
@@ -70,9 +70,9 @@
 
         <div class="divider"></div>
 
-        <div class="paint-settings">
-          <h3 class="grid-settings-title">Paint Options</h3>
-          <div class="colors">
+        <div class="options-paint">
+          <h3 class="options-heading">Paint</h3>
+          <div class="options-paint-colors">
             <a class="spring">Spring</a>
             <a class="summer">Summer</a>
             <a class="autumn">Autumn</a>
