Add input type range style

--- a/index.html
+++ b/index.html
@@ -50,12 +50,9 @@
               value="#fae8ff"
             />
           </div>
-          <div class="options-grid-buttons">
-            <a>Clear</a>
-            <a>Reset</a>
-          </div>
           <div class="options-grid-density">
             <input
+              class="slider"
               type="range"
               id="grid-density"
               name="grid-density"
@@ -65,6 +62,10 @@
               step="8"
             />
             <label for="grid-density">16 x 16</label>
+          </div>
+          <div class="options-grid-buttons">
+            <a>Clear</a>
+            <a>Reset</a>
           </div>
         </div>
 
