Refactor the sidebar

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
             <a class="summer">Summer</a>
             <a class="autumn">Autumn</a>
             <a class="winter">Winter</a>
+          </div>
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="options-shadows">
+          <h3 class="options-heading">Shadows</h3>
+          <div class="options-shadows-colors">
             <a class="shading">Shading</a>
             <a class="lighten">Lighten</a>
           </div>
