--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               type="color"
               id="grid-borders"
               name="grid-borders"
-              value="#fae8ff"
+              value="#D0D0D0"
             />
           </div>
           <div class="options-grid-density">
@@ -57,7 +57,7 @@
               id="grid-density"
               name="grid-density"
               min="8"
-              max="88"
+              max="64"
               value="16"
               step="8"
             />
