Implement clear grid functionality

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <label for="grid-density">16 x 16</label>
           </div>
           <div class="options-grid-buttons">
-            <a>Clear</a>
-            <a>Reset</a>
+            <a class="btn-clear">Clear</a>
+            <a class="btn-reset">Reset</a>
           </div>
         </div>
 
