--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <div class="options-paint">
           <h3 class="options-heading">Paint</h3>
           <div class="options-paint-colors">
-            <a class="spring">Spring</a>
-            <a class="summer">Summer</a>
-            <a class="autumn">Autumn</a>
-            <a class="winter">Winter</a>
+            <a class="spring btn-paint active">Spring</a>
+            <a class="summer btn-paint">Summer</a>
+            <a class="autumn btn-paint">Autumn</a>
+            <a class="winter btn-paint">Winter</a>
           </div>
         </div>
 
@@ -86,8 +86,8 @@
         <div class="options-shadows">
           <h3 class="options-heading">Shadows</h3>
           <div class="options-shadows-colors">
-            <a class="shading">Shading</a>
-            <a class="lighten">Lighten</a>
+            <a class="shading btn-paint">Shading</a>
+            <a class="lighten btn-paint">Lighten</a>
           </div>
         </div>
 
