--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               type="color"
               id="grid-borders"
               name="grid-borders"
-              value="#D0D0D0"
+              value="#ffffff"
             />
           </div>
           <div class="options-grid-density">
