Implement selecting paint color

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               value="#f72585"
             />
           </div>
-          <a class="spring btn btn-paint active">S</a>
+          <a class="spring btn btn-paint">S</a>
           <a class="summer btn btn-paint">S</a>
           <a class="autumn btn btn-paint">A</a>
           <a class="winter btn btn-paint">W</a>
