Add icons for color palettes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       <section class="grid"></section>
 
       <aside class="options">
-        <!-- TODO: Add icons to buttons -->
         <h3 class="options-heading">Paint Options</h3>
         <div class="paint-options">
           <div class="paint-color">
@@ -42,10 +41,14 @@
               value="#f72585"
             />
           </div>
-          <a class="spring btn btn-paint">S</a>
-          <a class="summer btn btn-paint">S</a>
-          <a class="autumn btn btn-paint">A</a>
-          <a class="winter btn btn-paint">W</a>
+          <a class="spring btn btn-paint"><i class="fa-solid fa-leaf"></i></a>
+          <a class="summer btn btn-paint"><i class="fa-solid fa-sun"></i></a>
+          <a class="autumn btn btn-paint"
+            ><i class="fa-brands fa-canadian-maple-leaf"></i
+          ></a>
+          <a class="winter btn btn-paint"
+            ><i class="fa-solid fa-snowflake"></i
+          ></a>
           <a class="shading btn btn-paint">Shading</a>
           <a class="lighten btn btn-paint">Lighten</a>
         </div>
