Add erase button

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             <label for="grid-density">24 x 24</label>
           </div>
           <div class="grid-options-buttons">
+            <a class="btn btn-grid-options btn-eraser"
+              ><i class="fa-solid fa-eraser"></i
+            ></a>
             <a class="btn btn-grid-options btn-clear">Clear</a>
             <a class="btn btn-grid-options btn-reset">Reset</a>
           </div>
