Fix few minor bugs

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="divider"></div>
 
-        <h3 class="options-heading">Grid Style</h3>
+        <h3 class="options-heading">Grid Options</h3>
         <div class="grid-options">
           <div class="grid-background">
             <label for="grid-background">Background</label>
@@ -72,7 +72,7 @@
               type="color"
               id="grid-color"
               name="grid-color"
-              value="#ffffff"
+              value="#eeeeee"
             />
           </div>
           <div class="grid-density">
