--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       src="https://kit.fontawesome.com/54ad0d43c6.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <script defer src="./app.js"></script>
     <title>Etch A Sketch</title>
   </head>
